# GLengine

./: .gitattributes  CMakeLists.txt  README.md  \
include/: camera.h  cube.h  frame_rate.h  input.h  my_camera.h  my_cube.h  my_shader.h  shader.h  shape.h  stats.h  text.h  window.h
include/engine/: camera.h  input.h  shader.h  shape.h  text.h  window.h
include/engine/shape/: cube_colored.h  cube_textured.h  shape.h
include/engine/shape/cube/: cube.h
include/engine/shape/cube/cube_colored/: cube_colored.h  cube_light.h  cube_material.h
include/shaders/: shader.h
include/stats/: plot.h  stats.h
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
resources/shaders/lighting/: vertex_shader.glsl
resources/shaders/shape/: fragment_shader.glsl
resources/shaders/shape/colored/: fragment_shader.glsl  vertex_shader.glsl
resources/shaders/shape/textured/: fragment_shader.glsl
resources/shaders/text/: vertex_shader.glsl
src/: camera.cpp  cube.cpp  frame_rate.cpp  input.cpp  main.cpp  shader.cpp  stats.cpp  window.cpp
src/engine/: camera.cpp  shader.cpp  shape.cpp  text.cpp  window.cpp
src/engine/shape/: cube.cpp  cube_colored.cpp  cube_textured.cpp  shape.cpp
src/engine/shape/cube/: cube.cpp
src/engine/shape/cube/cube_colored/: cube_colored.cpp  cube_light.cpp  cube_material.cpp
src/engine/shape/cube/cube_textured/: cube_textured.cpp
src/stats/: plot.cpp  stats.cpp  terminal_screen.cpp
